# CMS

./: README.md  create tables missing 2 queries in the beggining.sql
backend/: .env  README.md  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 01eefdf82888_sync_schema.py  1b08143fadb7_create_tenants_and_audit_logs.py  277b5770c360_add_server_defaults.py  379a4082e591_initial_schema.py  3f556ca988e4_message.py  5095649d46a4_add_playlist_tables.py  7e542a6caf35_restore_schedules_table.py  863e9867ac49_add_checksum_to_media_assets.py  9550558676fe_add_device_playlist_assignments.py  c2cc27f10612_add_playlist_tables.py  c8f53c1669a4_check_media_alignment.py  da03dabe95a9_initial_schema.py
backend/app/: dependencies.py  main.py  settings.py
backend/app/Z folder/: alembic cmd.txt  digital_signage_full_architecture.txt  testing the app.txt
backend/app/api/rest/: __init__.py  auth.py  device_admin.py  device_runtime.py  devices.py  health.py  media.py  playlists.py
backend/app/api/schemas/: auth.py  device.py  device_admin.py  device_commands.py  media.py  playlist.py  playlist_item_extended.py
backend/app/api/ws/: admin.py  connection_manager.py  (+2 more)
backend/app/common/: constants.py  device_commands.py  device_tokens.py  http.py  security.py  time.py
backend/app/tests/: test_redis.py  test_settings.py  token.py  token_gen.py
backend/digital_signage_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docker/nginx/: docker-compose.yml  nginx.conf
backend/docker/ngnix/: docker-compose.yml  nginx.conf
(+64 files in other folders)
